hphp/hack/test/typecheck/script.php.exp
File "script.php", line 4, characters 31-32:
Invalid return type (Typing[4110])
File "script.php", line 4, characters 18-20:
Expected int
File "script.php", line 4, characters 31-32:
But got string
