hphp/hack/test/typecheck/script.php
#!/usr/bin/env php
<?hh // partial

function test(): int { return ''; }
